@@ -1,25 +1,53 @@
 plugins {
     id 'java'
     id 'application'
+    id 'maven'
     id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-
-group = 'sef-project'
-version = '1.0'
-sourceCompatibility = '8'
-
-mainClassName = 'startScreen.StartScreen'
-
-javafx {
-    version = '8.0.241'
-    modules = ['java.controls', 'javafx.fxml']
+javafx{
+    version = '11.0.2'
+    modules = ['javafx.controls']
+    mainClassName = 'startScreen.StartScreen'
 }
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
+
+
+dependencies {
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.0.rc1'
+    compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'org.openjfx:javafx-base:11'
+    compile 'org.openjfx:javafx-graphics:11'
+    compile 'org.openjfx:javafx-controls:11'
+    compile 'org.openjfx:javafx-fxml:11'
+
+}
+
+group 'org.example'
+version '1.0-SNAPSHOT'
+sourceCompatibility = '11'
+
+/*{
+    doFirst{
+        options.compilerArgs =[
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
+}*/
+
 
 jar {
     manifest {
-        attributes "Main-Class" : 'startScreen.StartScreen'
+        attributes 'Main-Class': 'startScreen.StartScreen.'
     }
-    archiveName = 'GOA.jar'
+    from{
+        configurations.compile.collect{it.isDirectory() ? it : zipTree(it)}
+    }
+
 
 }
